# rapl-attack-sgx

./: .clang-format  .gitignore  CMakeLists.txt  run.sh  stress_run.sh
App/include/: aes.hpp  computations.hpp  msr.hpp  rapl.hpp  utilities.h
App/src/: App.cpp  aes.cpp  computations.cpp  msr_test.cpp  test_suite.cpp  utilities.cpp
Enclave/: Enclave.config.xml  Enclave.edl  Enclave_private.pem
Enclave/src/: Enclave.cpp
cmake/: FindSGX.cmake
scripts/: cpa.py  energy_power.py  energy_power_separate.py  extract.py  t_test.py  t_test_separate.py
